src/parser/PmmParser.java
// Generated from C:/Users/Sergio Arroni/IdeaProjects/DLP/src/parser\Pmm.g4 by ANTLR 4.9.2
package parser;

import ast.definition.*;
import ast.expression.*;
import ast.expression.literal.*;
import ast.expression.operator.*;
import ast.statement.*;
import ast.type.*;
import ast.type.complexTypes.*;
import ast.type.sympleTypes.*;
import ast.*;
import java.util.*;
import symboltable.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, INT_CONSTANT=47, CHAR_CONSTANT=48, REAL_CONSTANT=49, ID=50, 
		COMENTARIO=51, COMENTARIO_COMILLAS=52, TRASH=53;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_def = 2, RULE_defVaribales = 3, 
		RULE_defFunction = 4, RULE_functionType = 5, RULE_functionTypeParametersAux = 6, 
		RULE_tipo = 7, RULE_tipoSimple = 8, RULE_recordField = 9, RULE_statement = 10, 
		RULE_swtichbody = 11, RULE_temporal = 12, RULE_inBody = 13, RULE_statementbody = 14, 
		RULE_listExpression = 15, RULE_expression = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "def", "defVaribales", "defFunction", "functionType", 
			"functionTypeParametersAux", "tipo", "tipoSimple", "recordField", "statement", 
			"swtichbody", "temporal", "inBody", "statementbody", "listExpression", 
			"expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'main'", "'('", "')'", "':'", "','", "'='", "';'", "'struct'", 
			"'{'", "'}'", "'['", "']'", "'char'", "'double'", "'int'", "'while'", 
			"'for'", "'if'", "'else'", "'switch'", "'default'", "'return'", "'input'", 
			"'print'", "'++'", "'--'", "'case'", "'break'", "'continue'", "'.'", 
			"'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'=='", "'!='", "'>='", "'<'", 
			"'>'", "'<='", "'&&'", "'||'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "INT_CONSTANT", 
			"CHAR_CONSTANT", "REAL_CONSTANT", "ID", "COMENTARIO", "COMENTARIO_COMILLAS", 
			"TRASH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> defs = new ArrayList<>();
		public DefContext def1;
		public MainContext mainProgam;
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<DefContext> def() {
			return getRuleContexts(DefContext.class);
		}
		public DefContext def(int i) {
			return getRuleContext(DefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(34);
					((ProgramContext)_localctx).def1 = def();
					_localctx.defs.addAll(((ProgramContext)_localctx).def1.ast);
					}
					} 
				}
				setState(41);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(42);
			((ProgramContext)_localctx).mainProgam = main();
			setState(43);
			match(EOF);
			_localctx.defs.add(((ProgramContext)_localctx).mainProgam.ast);
			((ProgramContext)_localctx).ast =  new Program(_localctx.defs);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token OP1;
		public InBodyContext cuerpoMain;
		public InBodyContext inBody() {
			return getRuleContext(InBodyContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			((MainContext)_localctx).OP1 = match(T__0);
			setState(48);
			match(T__1);
			setState(49);
			match(T__2);
			setState(50);
			match(T__3);
			setState(51);
			match(T__4);
			setState(52);
			((MainContext)_localctx).cuerpoMain = inBody();
			((MainContext)_localctx).ast =  new FuncDefinition(((MainContext)_localctx).OP1.getCharPositionInLine()+1, ((MainContext)_localctx).OP1.getLine(),"main", new FunctionType(((MainContext)_localctx).OP1.getCharPositionInLine()+1, ((MainContext)_localctx).OP1.getLine(), "main", new ArrayList<VarDefinition>(), VoidType.getInstance(((MainContext)_localctx).OP1.getCharPositionInLine()+1, ((MainContext)_localctx).OP1.getLine())), ((MainContext)_localctx).cuerpoMain.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public DefVaribalesContext defVar;
		public DefFunctionContext defFunc;
		public DefVaribalesContext defVaribales() {
			return getRuleContext(DefVaribalesContext.class,0);
		}
		public DefFunctionContext defFunction() {
			return getRuleContext(DefFunctionContext.class,0);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_def);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				((DefContext)_localctx).defVar = defVaribales();
				_localctx.ast.addAll(((DefContext)_localctx).defVar.ast);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				((DefContext)_localctx).defFunc = defFunction();
				_localctx.ast.addAll(((DefContext)_localctx).defFunc.ast);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefVaribalesContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public List<String> idList = new ArrayList<>();
		public List<String> common = new ArrayList<>();
		public Expression expr = null;
		public Token OP1;
		public Token OP2;
		public TipoContext type;
		public ExpressionContext expression;
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefVaribalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVaribales; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefVaribales(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefVaribalesContext defVaribales() throws RecognitionException {
		DefVaribalesContext _localctx = new DefVaribalesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defVaribales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((DefVaribalesContext)_localctx).OP1 = match(ID);
			_localctx.idList.add((((DefVaribalesContext)_localctx).OP1!=null?((DefVaribalesContext)_localctx).OP1.getText():null));
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(65);
				match(T__5);
				setState(66);
				((DefVaribalesContext)_localctx).OP2 = match(ID);
				_localctx.idList.add((((DefVaribalesContext)_localctx).OP2!=null?((DefVaribalesContext)_localctx).OP2.getText():null));
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__4);
			setState(74);
			((DefVaribalesContext)_localctx).type = tipo();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(75);
				match(T__6);
				setState(76);
				((DefVaribalesContext)_localctx).expression = expression(0);
				((DefVaribalesContext)_localctx).expr =  ((DefVaribalesContext)_localctx).expression.ast;
				}
			}

			setState(81);
			match(T__7);
			for(String elem : _localctx.idList) { if(!_localctx.common.contains(elem)){ _localctx.ast.add(new VarDefinition(((DefVaribalesContext)_localctx).OP1.getCharPositionInLine()+1, ((DefVaribalesContext)_localctx).OP1.getLine(), elem, ((DefVaribalesContext)_localctx).type.ast, _localctx.expr)); _localctx.common.add(elem);}else{new ErrorType(((DefVaribalesContext)_localctx).OP1.getCharPositionInLine()+1, ((DefVaribalesContext)_localctx).OP1.getLine(), "The variable named " + elem + " is already being used");} } 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefFunctionContext extends ParserRuleContext {
		public List<FuncDefinition> ast = new ArrayList<>();
		public FunctionTypeContext aux;
		public FunctionTypeContext functionType;
		public InBodyContext cuerpo;
		public List<FunctionTypeContext> functionType() {
			return getRuleContexts(FunctionTypeContext.class);
		}
		public FunctionTypeContext functionType(int i) {
			return getRuleContext(FunctionTypeContext.class,i);
		}
		public List<InBodyContext> inBody() {
			return getRuleContexts(InBodyContext.class);
		}
		public InBodyContext inBody(int i) {
			return getRuleContext(InBodyContext.class,i);
		}
		public DefFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defFunction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefFunctionContext defFunction() throws RecognitionException {
		DefFunctionContext _localctx = new DefFunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defFunction);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(84);
					((DefFunctionContext)_localctx).aux = ((DefFunctionContext)_localctx).functionType = functionType();
					setState(85);
					((DefFunctionContext)_localctx).cuerpo = inBody();
					_localctx.ast.add(new FuncDefinition(((DefFunctionContext)_localctx).functionType.ast.getColumn(),((DefFunctionContext)_localctx).functionType.ast.getLine(),((DefFunctionContext)_localctx).aux.ast.getName(), ((DefFunctionContext)_localctx).aux.ast ,((DefFunctionContext)_localctx).cuerpo.ast));
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(90); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionTypeContext extends ParserRuleContext {
		public FunctionType ast;
		public Type tipoFunc = VoidType.getInstance(0,0);
		public List<VarDefinition> parameter = new ArrayList<>();
		public Token OP;
		public FunctionTypeParametersAuxContext var;
		public TipoSimpleContext type;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public FunctionTypeParametersAuxContext functionTypeParametersAux() {
			return getRuleContext(FunctionTypeParametersAuxContext.class,0);
		}
		public TipoSimpleContext tipoSimple() {
			return getRuleContext(TipoSimpleContext.class,0);
		}
		public FunctionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunctionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionTypeContext functionType() throws RecognitionException {
		FunctionTypeContext _localctx = new FunctionTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__0);
			setState(93);
			((FunctionTypeContext)_localctx).OP = match(ID);
			setState(94);
			match(T__2);
			setState(95);
			((FunctionTypeContext)_localctx).var = functionTypeParametersAux();
			setState(96);
			match(T__3);
			setState(97);
			match(T__4);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) {
				{
				setState(98);
				((FunctionTypeContext)_localctx).type = tipoSimple();
				((FunctionTypeContext)_localctx).tipoFunc =  ((FunctionTypeContext)_localctx).type.ast;
				}
			}

			((FunctionTypeContext)_localctx).ast =   new FunctionType(((FunctionTypeContext)_localctx).OP.getCharPositionInLine()+1, ((FunctionTypeContext)_localctx).OP.getLine(), (((FunctionTypeContext)_localctx).OP!=null?((FunctionTypeContext)_localctx).OP.getText():null), ((FunctionTypeContext)_localctx).var.ast, _localctx.tipoFunc);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionTypeParametersAuxContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public Token OP1;
		public TipoSimpleContext type1;
		public Token OP2;
		public TipoSimpleContext type2;
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public List<TipoSimpleContext> tipoSimple() {
			return getRuleContexts(TipoSimpleContext.class);
		}
		public TipoSimpleContext tipoSimple(int i) {
			return getRuleContext(TipoSimpleContext.class,i);
		}
		public FunctionTypeParametersAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionTypeParametersAux; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunctionTypeParametersAux(this);
			else return visitor.visitChildren(this);
		}
	}
